# sandbox

./: test.md
.github/workflows/: learn-github-actions.yml
devcontainer/: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml
fastapi-psql-sqlalchemy-alembic-trigger-function-practice/: Makefile  README.md  docker-compose.yaml  pyproject.toml  request_sample.json
fastapi-psql-sqlalchemy-alembic-trigger-function-practice/api/: database.py  main.py  models.py  settings.py  task.py  task_repository.py  task_repository_interface.py
fastapi-psql-sqlalchemy-alembic-trigger-function-practice/migration/: alembic.ini
fastapi-psql-sqlalchemy-alembic-trigger-function-practice/migration/alembic/: env.py
fastapi-psql-sqlalchemy-alembic-trigger-function-practice/migration/alembic/versions/: a2b9acc36db5_init.py
marp-practice/: clip-blip-siglip.md  marp_sample.md  vlm-benchmark-datasets.md
modern-bert/: main.py  pyproject.toml
nextjs-practice/: .gitignore  Dockerfile  README.md  compose.yaml  package.json  working-log.md
nextjs-practice/.devcontainer/: devcontainer.json
nextjs-practice/recipe-app/: README.md  package-lock.json  package.json
nextjs-practice/recipe-app/data/: recipes.ts
nextjs-practice/recipe-app/lib/: prisma.ts
nextjs-practice/recipe-app/pages/: index.tsx
nextjs-practice/recipe-app/pages/api/: recipes.ts
nextjs-practice/recipe-app/pages/api/recipes/: [slug].ts
nextjs-practice/recipe-app/pages/recipes/: [slug].tsx  index.tsx  new.tsx
nextjs-practice/recipe-app/prisma/: schema.prisma
nextjs-practice/recipe-app/prisma/migrations/20250507125943_create_recipes_table/: migration.sql
ollama-gemma3/: Dockerfile  README.md
roo-code-practice/: README.md  pyproject.toml
roo-code-practice/src/local_vlm_server/application/: interfaces.py  services.py
roo-code-practice/src/local_vlm_server/domain/: entities.py  exceptions.py  value_objects.py
roo-code-practice/src/local_vlm_server/infrastructure/: vlm_repository.py
roo-code-practice/src/local_vlm_server/infrastructure/vlm_clients/: base.py
roo-code-practice/src/local_vlm_server/infrastructure/vlm_clients/implementations/: gpt.py  llama.py
roo-code-practice/src/local_vlm_server/interface/: main.py
roo-code-practice/src/local_vlm_server/interface/api/: dependencies.py  routes.py  schemas.py
roo-code-practice/tests/: conftest.py
roo-code-practice/tests/integration/: test_api.py
roo-code-practice/tests/unit/application/: test_services.py
roo-code-practice/tests/unit/domain/: test_entities.py
roo-code-practice/tests/unit/infrastructure/: test_vlm_clients.py
static-embedding-japanese/: README.md  main.py  pyproject.toml
transformer_knock/: README.md
transformer_knock/asl-signs/: README.md  pyproject.toml
transformer_knock/asl-signs/config/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml
transformer_knock/asl-signs/exp/: 001.py  003.py  004.py  run.py
transformer_knock/asl-signs/src/: create_kfold.py
transformer_knock/asl-signs/src/datamodules/: dataset.py
transformer_knock/asl-signs/src/models/: attention.py  conv1dnet.py  modelmodule.py
uv-fastapi-pex/: .gitignore  README.md  docker-compose.yaml  pex.Dockerfile  pyproject.toml
uv-fastapi-pex/src/: main.py
