[tool.poetry]
name = "asl-signs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
pillow = "^10.2.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
japanize-matplotlib = "^1.1.3"
rapidfuzz = "^3.6.1"
tqdm = "^4.66.1"
albumentations = "^1.3.1"
lightning = "^2.2.0"
hydra-core = "^1.3.2"
torch = { version = "^2.0.0+cu117", source = "torch_cu117" }
torchvision = { version = "^0.15.0+cu117", source = "torch_cu117" }
tensorboard = "^2.16.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
jupyterlab = "^4.0.11"
ruff = "^0.1.14"
matplotlib = "^3.8.2"

[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "INP001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"